--- a/workers/interdead-auth/wrangler.toml
+++ b/workers/interdead-auth/wrangler.toml
@@ -1,6 +1,6 @@
 name = "interdead-auth"
 main = "src/worker.js"
-compatibility_date = "2024-11-28"
+compatibility_date = "2024-11-27"
 
 workers_dev = false
 preview_urls = false
@@ -18,3 +18,10 @@ INTERDEAD_SITE_BASE_URL = "https://interdead.phantom-draft.com"
 binding = "INTERDEAD_CORE"
 database_name = "interdead_core"
 database_id = "6874f882-d442-4e0f-a362-3da5f30c646a"
+
+[observability]
+  [observability.logs]
+    enabled = true
+    head_sampling_rate = 1
+    invocation_logs = true
+    persist = true
