--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@interdead/identity-core": "^0.1.7"
   },
   "devDependencies": {
-    "prettier": "^3.3.0"
+    "prettier": "^3.3.0",
+    "wrangler": "^4.53.0"
   }
 }
