--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -8,7 +8,8 @@ staticDir = ["static", "assets"]
 
 theme = "InterDead"
 
-disableKinds = ["taxonomy", "term"]
+[taxonomies]
+  category = "categories"
 
 [permalinks]
   blog = "/blog/:slug/"
